create navbar footer and hero section

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  /* button style */
+  .buy-btn {
+    @apply bg-primary inline-flex  w-[180px] items-center justify-center rounded-sm px-6 py-2   text-xs font-medium text-white lg:px-[60px] lg:py-[13px] lg:text-sm;
+  }
+  .cart-btn {
+    @apply bg-secondary text-gray-7 inline-flex w-[180] items-center justify-center gap-2 rounded-sm px-6 py-2 text-xs   font-medium lg:gap-[10px] lg:px-[37px] lg:py-[13px] lg:text-sm;
+  }
+}
