--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,17 @@
 
 @layer components {
   /* button style */
-  .buy-btn {
+  .adafd-btn {
     @apply inline-flex w-[180px]  items-center justify-center rounded-sm bg-primary px-6 py-2   text-xs font-medium text-white lg:px-[60px] lg:py-[13px] lg:text-sm;
   }
-  .cart-btn {
-    @apply inline-flex w-[180] items-center justify-center gap-2 rounded-sm bg-secondary px-6 py-2 text-xs font-medium   text-gray-7 lg:gap-[10px] lg:px-[37px] lg:py-[13px] lg:text-sm;
+  .delete-btn {
+    @apply text-gray-7 inline-flex w-[180] items-center justify-center gap-2 rounded-sm bg-secondary px-6 py-2 text-xs   font-medium lg:gap-[10px] lg:px-[37px] lg:py-[13px] lg:text-sm;
   }
-  .submit-btn {
-    @apply rounded-md bg-[#00D991A1] px-3 py-2 text-sm font-medium uppercase tracking-wide text-white transition-all hover:opacity-90 lg:px-4 lg:py-2.5 lg:text-base lg:font-semibold;
+  .search-btn {
+    @apply bg-deep-green mr-1 flex items-center space-x-1.5 rounded-md px-4 py-2 text-sm text-white;
+  }
+  .add-btn {
+    @apply bg-deep-green rounded-md px-3 py-2 text-sm font-medium uppercase tracking-wide text-white transition-all hover:opacity-90 lg:px-4 lg:py-2.5 lg:text-base lg:font-semibold;
   }
 }
 
